--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <input id="search-field" type="text" class="form-control" placeholder="Enter Book Name" aria-label="Recipient's username" aria-describedby="button-addon2">
         <button onclick="searchBook()" class="btn btn-outline-secondary" type="button" id="search-button">Search</button>
       </div>
+
+      <div id="search-result" class="row row-cols-1 row-cols-md-4 g-3 mx-2">
+      </div>
     
     <script src="js/book.js"></script>
 </body>
