--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h5 id="result" class="text-center"></h5>
       </div>
 
-      <div id="search-result" class="row row-cols-1 row-cols-md-4 g-3 mx-2">
+      <div id="search-result" class="row row-cols-1 row-cols-md-4 g-3 mx-2 my-5">
 
       </div>
     
